tests/fail/include_with_error.txt
error[P1001]: parse error
 --> /included:1:7
  |
1 | let a=
  | -     ^ expected expression
  | |
  | while parsing `let` statement
  |
  = help: expressions must start with a value, or an `env`, `glob`, `which`, or `shell` operation
note: included here
 --> /INPUT:1:1
  |
1 | include "included"
  | ^^^^^^^^^^^^^^^^^^
